# battle-hamsters

./: .gitignore  2_d_arena_hamster_game_project_definition.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: game-deploy-cloudflare.yml  main-pr-source-guard.yml  portal-ci.yml  portal-deploy-cloudflare.yml  server-ci.yml  server-deploy-oracle.yml
apps/game/: index.html  package.json  tsconfig.json  vite.config.ts
apps/portal/: package.json  tsconfig.json
deploy/: .env.example  docker-compose.yml
deploy/oracle/: .env.example  docker-compose.yml  nginx-api.conf  setup-nginx.sh
docs/: ROADMAP.md  index.md  project-principles.md
docs/game-design/: core-rules.md  item-design.md  map-design.md  weapon-design.md
docs/guides/: contribution.md  deployment.md  local-setup.md  server-setup.md  setup.md  spec-driven-workflow.md
docs/team/: collaboration-rules.md  roles.md
docs/technical/: architecture.md  collision-contract.md  current-implementation.md  data-formats.md  mini-spec-airstrike-v1.md  mini-spec-beam-grab-v1.md  mini-spec-camera-visual-bounds-v1.md  mini-spec-collision-primitives.md  mini-spec-combat-presentation-polish-v0.md  mini-spec-death-feedback-debug-toggle-v1.md  (+34 more)
scripts/: dev-all.sh  dev-common.sh  dev-game.sh  dev-portal.sh  dev-server.sh  dev-web.sh
server/: Cargo.toml  Dockerfile  Dockerfile.prod  docker-compose.yml
server/src/: game_data.rs  main.rs  room_combat.rs  room_config.rs  room_pickups.rs  room_projectiles.rs  room_runtime.rs  room_world_events.rs  ws_runtime.rs
(+47 files in other folders)
