[package]
name = "battle-hamsters-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = '0.8', features = ['runtime-tokio', 'postgres', 'migrate'] }
tokio = { version = '1', features = ['full'] }
dotenvy = '0.15'
actix-web = '4'
actix-rt = '2'
actix-cors = '0.7'
tokio-tungstenite = '0.21'
futures-util = '0.3'
serde = { version = '1', features = ['derive'] }
serde_json = '1'
env_logger = '0.11'
log = '0.4'

[dev-dependencies]
actix-rt = '2'
