[package]
name = "battle-hamsters-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
actix-rt = "2"
